# cosmos-predict2

./: .gitignore  ATTRIBUTIONS.md  Dockerfile  README.md  cosmos-predict2.yaml  pyproject.toml  requirements-conda.txt  requirements-docker.txt  run.sh
assets/rejection_sampling/: kitchen_sink.txt
assets/text2image/: batch_example.json
assets/text2world/: batch_example.json
assets/video2world/: batch_example.json
assets/video2world_cosmos_nemo_assets/: output_Digit_Lift_movie.txt
assets/video2world_lvg/: example_prompt.txt
checkpoints/: README.md
cosmos_predict2/: checkpointer.py  conditioner.py
cosmos_predict2/auxiliary/: cosmos_reason1.py  text_encoder.py
cosmos_predict2/callbacks/: device_monitor.py  grad_clip.py  (+2 more)
datasets/: README.md  agibot_head_center_fisheye_color.jsonl
documentations/: inference_text2image.md  inference_text2world.md  inference_video2world.md  performance.md  post-training_video2world.md  post-training_video2world_action.md  post-training_video2world_agibot_fisheye.md  post-training_video2world_cosmos_nemo_assets.md  post-training_video2world_gr00t.md  setup.md
examples/: action_video2world.py  text2image.py  text2world.py  video2world.py  video2world_action.py  video2world_bestofn.py  video2world_gr00t.py  video2world_lvg.py
imaginaire/: config.py  model.py  trainer.py
scripts/: download_checkpoints.py  get_t5_embeddings.py  get_t5_embeddings_from_cosmos_nemo_assets.py  get_t5_embeddings_from_groot_dataset.py  install_decord_arm.sh  prepare_agibot_fisheye_data.py  prepare_batch_input_json.py  test_environment.py  train.py
(+144 files in other folders)
